some authentication fixes